--- a/public/css/main_styles.css
+++ b/public/css/main_styles.css
@@ -29,7 +29,6 @@
 16. Newsletter
 17. Footer
 
-
 ******************************/
 
 /***********
@@ -1670,6 +1669,8 @@ select option
 	display: block;
 	position: relative;
 	max-width: 100%;
+	width: 115px;
+	object-fit: contain;
 }
 .product_content
 {
