--- a/public/css/shop_styles.css
+++ b/public/css/shop_styles.css
@@ -1416,12 +1416,16 @@ select option
 	width: 100%;
 	height: 115px;
 }
+
 .product_image img
 {
 	display: block;
 	position: relative;
 	max-width: 100%;
+	width: 115px;
+	object-fit: contain;
 }
+
 .product_content
 {
 	width: 100%;
@@ -1481,6 +1485,7 @@ select option
 {
 	color: #0e8ce4;
 }
+
 .product_fav
 {
 	position: absolute;
